--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h1>My index</h1>
     <h3>hi</h3>
-    <a href="https://github.com/Louis5628/microsoft">microsoft</a>
+    <a href="https://louis5628.github.io/microsoft/">microsoft</a>
 
 </body>
 </html>
