--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     
     <h1>My index</h1>
     <h3>hi</h3>
-    <a href="https://louis5628.github.io/microsoft/">microsoft</a>
+    <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">microsoft</a>
+    <a href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)"></a>
+
 
 </body>
 </html>
