--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
 <body>
 
+    <div class="banner">
+        <div class="banner-img">
+        </div>
+    </div>
+
     <div class="container">
 
         <h1>My index</h1>
