--- a/index.html
+++ b/index.html
@@ -22,24 +22,72 @@
     <!-- wow.js -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
+    <!-- index style -->
+    <link rel="stylesheet" href="/css/index.css">
+
 
 </head>
 
 <body>
 
-    <div class="banner">
-        <div class="banner-img">
+    <main>
+
+        <div class="banner d-flex justify-content-center">
+            <div class="banner-img">
+                <!-- <img src="/img/Banner.jpg" alt="" style="max-width: 100%;height: auto;"> -->
+            </div>
         </div>
-    </div>
 
-    <div class="container">
+        <div class="container">
 
-        <h1>My index</h1>
-        <h3>hi</h3>
-        <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">Microsoft</a>
-        <a href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">BMI計算機</a>
+            <h1>My index</h1>
+            <h3>hi</h3>
+            <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">Microsoft</a>
+            <a href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">BMI計算機</a>
 
-    </div>
+            <div class="row no-gutters">
+                <div class="col-5">
+                    <div class="list-group" id="list-tab" role="tablist">
+                        <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
+                            href="#list-home" role="tab" aria-controls="home">Microsoft 切版練習</a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                            href="#list-profile" role="tab" aria-controls="profile">BMI計算機</a>
+                        <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"
+                            href="#list-messages" role="tab" aria-controls="messages">F1 一頁式網站</a>
+                        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list"
+                            href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+                    </div>
+                </div>
+                <div class="col-5 links">
+                    <div class="tab-content" id="nav-tabContent">
+                        <div class="link tab-pane fade show active" id="list-home" role="tabpanel"
+                            aria-labelledby="list-home-list">
+                            <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">Microsoft 切版練習
+                            <img src="/img/Microsoft.PNG" alt="">
+                            </a>
+                        </div>
+                        <div class="link tab-pane fade" id="list-profile" role="tabpanel"
+                            aria-labelledby="list-profile-list"><a
+                                href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">BMI計算機
+                            <img src="/img/BMI.PNG" alt=""></a>
+                        </div>
+                        <div class="link tab-pane fade" id="list-messages" role="tabpanel"
+                            aria-labelledby="list-messages-list">
+                            <a
+                                href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">F1 一頁式網站
+                            <img src="/img/BMI.PNG" alt=""></a>
+                           </div>
+                        <div class="link tab-pane fade" id="list-settings" role="tabpanel"
+                            aria-labelledby="list-settings-list">
+                            ...</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+    </main>
 
 
 
