--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="link tab-pane fade" id="list-messages" role="tabpanel"
                             aria-labelledby="list-messages-list">
                             <a
-                                href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">F1 一頁式網站
+                                href="https://louis5628.github.io/F1-one page website)">F1 一頁式網站
                             <img src="/img/BMI.PNG" alt=""></a>
                            </div>
                         <div class="link tab-pane fade" id="list-settings" role="tabpanel"
