--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                         </div>
                         <div class="link tab-pane fade" id="list-profile" role="tabpanel"
                             aria-labelledby="list-profile-list"><a
-                                href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">BMI計算機
+                                href="https://louis5628.github.io/2021-04-15-BMI)">BMI計算機
                             <img src="/img/BMI.PNG" alt=""></a>
                         </div>
                         <div class="link tab-pane fade" id="list-messages" role="tabpanel"
                             aria-labelledby="list-messages-list">
                             <a
                                 href="https://louis5628.github.io/F1-one page website)">F1 一頁式網站
-                            <img src="/img/BMI.PNG" alt=""></a>
+                            <img src="/img/f1-website.PNG" alt=""></a>
                            </div>
                         <div class="link tab-pane fade" id="list-settings" role="tabpanel"
                             aria-labelledby="list-settings-list">
