--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                         </div>
                         <div class="link tab-pane fade" id="list-profile" role="tabpanel"
                             aria-labelledby="list-profile-list"><a
-                                href="https://louis5628.github.io/2021-04-15-BMI)">BMI計算機
+                                href="https://louis5628.github.io/2021-04-15-BMI.html)">BMI計算機
                             <img src="/img/BMI.PNG" alt=""></a>
                         </div>
                         <div class="link tab-pane fade" id="list-messages" role="tabpanel"
                             aria-labelledby="list-messages-list">
                             <a
-                                href="https://louis5628.github.io/F1-one page website)">F1 一頁式網站
+                                href="https://louis5628.github.io/F1-one page website.html)">F1 一頁式網站
                             <img src="/img/f1-website.PNG" alt=""></a>
                            </div>
                         <div class="link tab-pane fade" id="list-settings" role="tabpanel"
