--- a/index.html
+++ b/index.html
@@ -43,43 +43,109 @@
             <h1>My index</h1>
             <h3>hi</h3>
             <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">Microsoft</a>
-            <a href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">BMI計算機</a>
+            <a
+                href="https://louis5628.github.io/2021-04-15-BMI%E8%A8%88%E7%AE%97%E6%A9%9F(%E4%BD%9C%E6%A5%AD)">BMI計算機</a>
 
             <div class="row no-gutters">
-                <div class="col-5">
+                <div class="col-lg-5">
                     <div class="list-group" id="list-tab" role="tablist">
-                        <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
-                            href="#list-home" role="tab" aria-controls="home">Microsoft 切版練習</a>
-                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
-                            href="#list-profile" role="tab" aria-controls="profile">BMI計算機</a>
+                        <a class="list-group-item list-group-item-action active" id="list-Microsoft" data-toggle="list"
+                            href="#Microsoft" role="tab">
+                            <h5>Microsoft 切版練習</h5>
+                        </a>
                         <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"
-                            href="#list-messages" role="tab" aria-controls="messages">F1 一頁式網站</a>
+                            href="#F1-one-page" role="tab">
+                            <h5>F1 一頁式網站</h5>
+                        </a>
                         <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list"
-                            href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+                            href="#Parallax" role="tab">
+                            <h5>Parallax練習</h5>
+                        </a>
+                        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list"
+                            href="#Flex" role="tab">
+                            <h5>Fex練習</h5>
+                        </a>
+
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                            href="#BMI" role="tab">
+                            <h5>BMI計算機</h5>
+                        </a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                            href="#TAB" role="tab">
+                            <h5>TAB練習</h5>
+                        </a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                            href="#score" role="tab">
+                            <h5>if else 練習</h5>
+                        </a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                            href="#API" role="tab">
+                            <h5>天氣API練習</h5>
+                        </a>
                     </div>
                 </div>
-                <div class="col-5 links">
+                <div class="col-lg-5 links">
                     <div class="tab-content" id="nav-tabContent">
-                        <div class="link tab-pane fade show active" id="list-home" role="tabpanel"
-                            aria-labelledby="list-home-list">
-                            <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">Microsoft 切版練習
-                            <img src="/img/Microsoft.PNG" alt="">
+                        <div class="link tab-pane fade show active" id="Microsoft" role="tabpanel"
+                            aria-labelledby="list-Microsoft">
+                            <a href="https://louis5628.github.io/20210413-Microsoft 切版.html">
+                                <h4>Microsoft 切版練習</h4>
+                                <img src="/img/Microsoft.PNG" alt="">
                             </a>
                         </div>
-                        <div class="link tab-pane fade" id="list-profile" role="tabpanel"
-                            aria-labelledby="list-profile-list"><a
-                                href="https://louis5628.github.io/2021-04-15-BMI.html">BMI計算機
-                            <img src="/img/BMI.PNG" alt=""></a>
-                        </div>
-                        <div class="link tab-pane fade" id="list-messages" role="tabpanel"
+
+                        <div class="link tab-pane fade" id="F1-one-page" role="tabpanel"
                             aria-labelledby="list-messages-list">
-                            <a
-                                href="https://louis5628.github.io/F1-one page website.html">F1 一頁式網站
-                            <img src="/img/f1-website.PNG" alt=""></a>
-                           </div>
-                        <div class="link tab-pane fade" id="list-settings" role="tabpanel"
+                            <a href="https://louis5628.github.io/F1-one page website.html">
+                                <h4>F1 一頁式網站</h4>
+                                <img src="/img/f1-website.PNG" alt="">
+                            </a>
+                        </div>
+                        <div class="link tab-pane fade" id="Parallax" role="tabpanel"
                             aria-labelledby="list-settings-list">
-                            ...</div>
+                            <a href="https://louis5628.github.io/parallax-practice.html">
+                                <h4>Parallax練習</h4>
+                                <img src="/img/Parallax-practice.PNG" alt="">
+                            </a>
+                        </div>
+                        <div class="link tab-pane fade" id="Flex" role="tabpanel" aria-labelledby="list-settings-list">
+                            <a href="https://louis5628.github.io/twitch-flex-practice.html">
+                                <h4>Flex練習</h4>
+                                <img src="/img/twitch.PNG" alt="">
+                            </a>
+                        </div>
+
+                        <div class="link tab-pane fade" id="BMI" role="tabpanel" aria-labelledby="list-profile-list"><a
+                                href="https://louis5628.github.io/2021-04-15-BMI.html">
+                                <h4>BMI計算機</h4>
+                                <img src="/img/BMI.PNG" alt="">
+                            </a>
+                        </div>
+
+                        <div class="link tab-pane fade" id="TAB" role="tabpanel" aria-labelledby="list-profile-list"><a
+                                href="https://louis5628.github.io/javascript-practice-tab.html">
+                                <h4>TAB練習</h4>
+                                <img src="/img/TAB.PNG" alt="">
+                            </a>
+                        </div>
+
+                        <div class="link tab-pane fade" id="score" role="tabpanel" aria-labelledby="list-profile-list">
+                            <a href="https://louis5628.github.io/javascript-practice-tab.html">
+                                <h4>if else 練習</h4>
+                                <img src="/img/score.PNG" alt="">
+                            </a>
+                        </div>
+
+                        <div class="link tab-pane fade" id="API" role="tabpanel" aria-labelledby="list-profile-list">
+                            <a href="https://louis5628.github.io/javascript-practice-tab.html">
+                                <h4>天氣API練習</h4>
+                                <img src="/img/weather-api.PNG" alt="">
+                            </a>
+                        </div>
+
+
+
+
                     </div>
                 </div>
             </div>
