--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                             href="#API" role="tab">
                             <h5>天氣API練習</h5>
                         </a>
+
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                        href="#block-game" role="tab">
+                        <h5>For迴圈練習</h5>
+                    </a>
                     </div>
                 </div>
                 <div class="col-lg-5 links">
@@ -140,6 +145,13 @@
                             <a href="https://louis5628.github.io/javascript-practice-tab.html">
                                 <h4>天氣API練習</h4>
                                 <img src="/img/weather-api.PNG" alt="">
+                            </a>
+                        </div>
+
+                        <div class="link tab-pane fade" id="block-game" role="tabpanel" aria-labelledby="list-profile-list">
+                            <a href="https://louis5628.github.io/javascript-practice-block-game.html">
+                                <h4>For迴圈練習</h4>
+                                <img src="/img/block-game.PNG" alt="">
                             </a>
                         </div>
 
