--- a/bootstrap-digipack-template.html
+++ b/bootstrap-digipack-template.html
@@ -10,7 +10,7 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <link rel="stylesheet" href="./CSS/digipack-template.css">
+    <link rel="stylesheet" href="../CSS/digipack-template.css">
 
 </head>
 
