--- a/bootstrap-digipack-index.html
+++ b/bootstrap-digipack-index.html
@@ -20,7 +20,7 @@
     <nav>
         <div class="container px-lg-2 px-xl-0" style="max-width: 1280px">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand ml-3" href="#">
+                <a class="navbar-brand ml-3" href="./bootstrap-digipack-index.html">
                     <div class="logo">
                         <img src="./img/logo.svg" alt="">
                     </div>
@@ -65,7 +65,7 @@
 
                         <div class="dropdown d-flex flex-row align-items-center py-3">
 
-                            <a href="./bootstrap-digipack-shopping cart-1.html">
+                            <a href="./shopping-cart/bootstrap-digipack-shopping cart-1.html">
                                 <i
                                     class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i></a>
 
