--- a/shopping-cart/bootstrap-digipack-shopping cart-1.html
+++ b/shopping-cart/bootstrap-digipack-shopping cart-1.html
@@ -10,11 +10,11 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <link rel="stylesheet" href="./CSS/digipack-template.css">
+    <link rel="stylesheet" href="../css/digipack-template.css">
 
-    <link rel="stylesheet" href="./CSS/digipack-shopping cart template.css">
+    <link rel="stylesheet" href="../CSS/digipack-shopping cart template.css">
 
-    <link rel="stylesheet" href="./CSS/digipack-shopping cart-1.css">
+    <link rel="stylesheet" href="../css/digipack-shopping cart-1.css">
 
 </head>
 
@@ -23,9 +23,9 @@
     <nav>
         <div class="container px-lg-2 px-xl-0" style="max-width: 1280px">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand ml-3" href="#">
+                <a class="navbar-brand ml-3" href="../bootstrap-digipack-index.html">
                     <div class="logo">
-                        <img src="./img/logo.svg" alt="">
+                        <img src="../img/logo.svg" alt="">
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -79,7 +79,7 @@
                                 </i>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item" href="./bootstrap-digipack-login.html">Login</a>
+                                    <a class="dropdown-item" href="../bootstrap-digipack-login.html">Login</a>
                                 </div>
                             </a>
                         </div>
@@ -247,7 +247,10 @@
                     <hr class="featurette-divider">
                     <div class="row no-gutters">
                         <div class="col-12 d-flex justify-content-between">
-                            <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物
+                            <p class="d-flex align-items-center m-0">
+                                <a href="../bootstrap-digipack-index.html">
+                                    <i class="fa fa-arrow-left text-sm pr-2"></i>返回購物
+                                </a>
                             </p>
                             <a href="./bootstrap-digipack-shopping cart-2.html"><button type="button"
                                     class="btn btn-primary px-5 py-3">下一步</button></a>
