--- a/bootstrap-digipack-index.html
+++ b/bootstrap-digipack-index.html
@@ -10,8 +10,10 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
-    <link rel="stylesheet" href="./CSS/digipack-template.css">
-    <link rel="stylesheet" href="./CSS/digipack-index.css">
+    <!-- <link rel="stylesheet" href="./CSS/digipack-template.css">
+    <link rel="stylesheet" href="./CSS/digipack-index.css"> -->
+    <link rel="stylesheet" href="./css/digipack-template.css">
+    <link rel="stylesheet" href="./css/digipack-index.css">
 
 </head>
 
