--- a/shopping-cart/bootstrap-digipack-shopping cart-1.html
+++ b/shopping-cart/bootstrap-digipack-shopping cart-1.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="../css/digipack-template.css">
 
-    <link rel="stylesheet" href="../CSS/digipack-shopping cart template.css">
+    <link rel="stylesheet" href="../css/digipack-shopping cart template.css">
 
     <link rel="stylesheet" href="../css/digipack-shopping cart-1.css">
 
