--- a/shopping-cart/bootstrap-digipack-shopping cart-2.html
+++ b/shopping-cart/bootstrap-digipack-shopping cart-2.html
@@ -10,11 +10,11 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <link rel="stylesheet" href="../CSS/digipack-template.css">
+    <link rel="stylesheet" href="../css/digipack-template.css">
 
-    <link rel="stylesheet" href="../CSS/digipack-shopping cart template.css">
+    <link rel="stylesheet" href="../css/digipack-shopping cart template.css">
 
-    <link rel="stylesheet" href="../CSS/digipack-shopping cart-2.css">
+    <link rel="stylesheet" href="../css/digipack-shopping cart-2.css">
 
 </head>
 
