--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                             href="#bootstrap" role="tab">
                             <h5>Bootstrap練習</h5>
                         </a>
+
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+                        href="#team-project" role="tab">
+                        <h5>團體專題-巧遇農情</h5>
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-lg-5 links">
@@ -166,6 +172,15 @@
                             <a href="https://louis5628.github.io/bootstrap-digipack-index.html">
                                 <h4>Bootstrap練習</h4>
                                 <img src="/img/bootstrap.PNG" alt="">
+                            </a>
+                        </div>
+
+                        
+                        <div class="link tab-pane fade" id="team-project" role="tabpanel"
+                            aria-labelledby="list-profile-list">
+                            <a href="https://110-03-sunyehfy-chomeet.dev-hub.io/">
+                                <h4>團體專題-巧遇農情</h4>
+                                <img src="/img/chomeet.PNG" alt="">
                             </a>
                         </div>
 
