--- a/CHOMEET/index.html
+++ b/CHOMEET/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- index -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/CHOMEET/css/index.css">
 
     <!-- Font Awsome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
